--- a/Full New/mascaret.kv
+++ b/Full New/mascaret.kv
@@ -1,3 +1,5 @@
+
+
 MascaretRoot:
 
 
@@ -18,7 +20,7 @@ MascaretRoot:
             canvas.before:
                 Color:
                     rgba: (0,0,0,0.5)
-                Rectangle:                
+                Rectangle:
                     source: 'gui/testrectangle.png'
                     size: (self.width + 120, self.height + 20)
                     pos: self.x - 100, self.y + 5
@@ -53,7 +55,7 @@ MascaretRoot:
                     spacing: "5dp"
                     padding: "8dp"
                     TextInput:
-                        text: "claeysremi"
+                        text: "guichetcle"
                         focus: True
                         background_color: (1, 1, 1, 0)
                         foreground_color: (1,1,1,0.8)
@@ -75,7 +77,7 @@ MascaretRoot:
                         font_name: 'OCRAEXT.TTF'
                         font_size: '20dp'
                         cursor_color: 1,1,1,0.8
-                        text: "doucement"
+                        text: "laptite"
             BoxLayout:
                 size_hint: 1, 0.25
                 Label:
@@ -132,7 +134,7 @@ MascaretRoot:
                     on_press:
                         self.parent.parent.parent.manager.transition.direction = 'left'
                         self.parent.parent.parent.manager.current = '2'
-            FloatLayout:
+            BoxLayout:
                 id: right_pan
                 canvas:
                     Color:
@@ -144,7 +146,7 @@ MascaretRoot:
                     size_hint: 0.5,0.5
                     pos_hint: {'x': 0.25,'y': 0.25}
 
-            
+
     Screen:
         name: '2'
         Button:
@@ -203,7 +205,7 @@ MascaretRoot:
                     text: 'HP'
                     on_release: self.parent.parent.parent.parent.manager.current = 'homepage'
 
-            FloatLayout:
+            BoxLayout:
                 id: right_pan
                 canvas:
                     Color:
@@ -214,7 +216,7 @@ MascaretRoot:
                 Button:
                     size_hint: 0.5,0.5
                     pos_hint: {'x': 0.25,'y': 0.25}
-        
+
     Screen:
         name: '2'
         Button:
@@ -229,20 +231,45 @@ MascaretRoot:
 
 
 
+<Formulaire_database_1>:
+    new_legal_entity_box: new_legal_entity
+    size: self.size
+    pos: self.pos
+    BoxLayout:
+        spacing: "5dp"
+        size_hint: None, None
+        pos_hint:{'x':0.1,'y':0.5}
+        width: "300dp"
+        height: "40dp"
+        TextInput:
+            id: new_legal_entity
+        Button:
+            size_hint: 0.5,1
+            text: "Add"
+            on_release: root.send_new_legal_entity()
+    TestList:
+        size_hint: 0.3,0.5
+        pos_hint:{'x':0.5,'y':0.3}
 
 
 
 
-<RightPanel>:
-    canvas:
-        Color:
-            rgba: (1,1,1,1)
-        Rectangle:
-            size: self.size
-            pos: self.pos
-    Button:
-        size_hint: 0.5,0.5
-        pos_hint: {'x': 0.25,'y': 0.25}
+<TestListItem>:
+    size_hint_y: None
+    size_hint_x: None
+    height: "30dp"
+    width: "200dp"
+    selected_color: (0.1, 0.1, 0.1, 0.1)
+    deselected_color: (1,1,1,1)
+    italic: True
+    font_size: '20dp'
+    text_size: self.size
+    halign: 'justify'
+    valign: 'top'
+    font_name: 'OCRAEXT.TTF'
 
-<RightPanelBtn>:
-    
+
+        
+
+            
+
