--- a/Full New/mascaret.kv
+++ b/Full New/mascaret.kv
@@ -1,4 +1,5 @@
-
+#:import la kivy.adapters.listadapter
+#:import ok user.outil
 
 MascaretRoot:
 
@@ -158,9 +159,6 @@ MascaretRoot:
                 self.parent.manager.current = '1'
 
 
-
-
-
 <ModuleGUI>:
     tools_box: tools_boxe
     screen1_box: box
@@ -231,8 +229,8 @@ MascaretRoot:
 
 
 
-<Formulaire_database_1>:
-    list_ent_jur_box:id_testlist
+<Formulaire_Ent_Jur>:
+    list_ent_jur_box: id_jur_ent_list
     new_legal_entity_box: new_legal_entity
     size: self.size
     pos: self.pos
@@ -247,50 +245,43 @@ MascaretRoot:
             size_hint: 0.5,1
             text: "Add"
             on_release: root.send_new_legal_entity()
-    TestList:
-        id:id_testlist
-        size_hint: 0.3,0.45
+    Jur_Ent_List:
+        id:id_jur_ent_list
+        size_hint: 0.5,0.45
         pos_hint:{'x':0.05,'y':0.3}
 
-
-
-
-<TestListItem>:
+<Jur_Ent_List_Item>:
     size_hint_y: None
     size_hint_x: None
     height: "30dp"
-    width: "200dp"
+    width: "600dp"
     selected_color: (0.1, 0.1, 0.1, 0.1)
     deselected_color: (1,1,1,1)
-    italic: True
-    font_size: '20dp'
-    text_size: self.size
-    halign: 'justify'
-    valign: 'top'
-    font_name: 'OCRAEXT.TTF'
+    Label:
+        size_hint_x: 1.5
+        text: root.id_jur_ent
+        italic: True
+        font_size: '20dp'
+        text_size: self.size
+        halign: 'justify'
+        valign: 'top'
+        font_name: 'OCRAEXT.TTF'
+    Label:
+        text: root.name_jur_ent
+        italic: True
+        font_size: '20dp'
+        text_size: self.size
+        halign: 'justify'
+        valign: 'top'
+        font_name: 'OCRAEXT.TTF'
 
+<Jur_Ent_List>:
+    ent_jur_listview: id_listview
+    ListView:
+        id: id_listview
+        adapter:
+            la.ListAdapter(data=[], cls=ok.Jur_Ent_List_Item,
+            args_converter=root.ent_jur_converter,selection_mode='single',
+            allow_empty_selection=False)
+    
 
-
-<Formulaire_Location>:
-    ent_jur_listbox: test_list
-    new_location_box: new_location
-    size: self.size
-    pos: self.pos
-    BoxLayout:
-        spacing: "5dp"
-        size_hint: 0.3, None
-        pos_hint:{'x':0.05,'y':0.8}
-        height: "30dp"
-        TextInput:
-            id: new_location
-        Button:
-            size_hint: 0.5,1
-            text: "Add"
-            on_release: root.send_new_location()
-    TestList:
-        id:test_list
-        size_hint: 0.3,0.45
-        pos_hint:{'x':0.05,'y':0.3}
-    LocationList:
-        size_hint: 0.3,0.45
-        pos_hint:{'x':0.5,'y':0.3}
