--- a/Full New/mascaret.kv
+++ b/Full New/mascaret.kv
@@ -283,5 +283,75 @@ MascaretRoot:
             la.ListAdapter(data=[], cls=ok.Jur_Ent_List_Item,
             args_converter=root.ent_jur_converter,selection_mode='single',
             allow_empty_selection=False)
+
+
+
+
+
+
+
+
+
+
+<Formulaire_Location>:
+    list_location_box: id_location_list
+    new_location_box: new_location
+    size: self.size
+    pos: self.pos
+    BoxLayout:
+        spacing: "5dp"
+        size_hint: 0.3, None
+        pos_hint:{'x':0.05,'y':0.8}
+        height: "30dp"
+        TextInput:
+            id: new_location
+        Button:
+            size_hint: 0.5,1
+            text: "Add"
+            on_release: root.send_new_location()
+    Location_List:
+        id:id_location_list
+        size_hint: 0.5,0.45
+        pos_hint:{'x':0.05,'y':0.3}
+    Jur_Ent_List:
+        id:id_jur_ent_list
+        size_hint: 0.5,0.45
+        pos_hint:{'x':0.55,'y':0.3}
+
+<Location_List_Item>:
+    size_hint_y: None
+    size_hint_x: None
+    height: "30dp"
+    width: "600dp"
+    selected_color: (0.1, 0.1, 0.1, 0.1)
+    deselected_color: (1,1,1,1)
+    Label:
+        size_hint_x: 1.5
+        text: root.id_location
+        italic: True
+        font_size: '20dp'
+        text_size: self.size
+        halign: 'justify'
+        valign: 'top'
+        font_name: 'OCRAEXT.TTF'
+    Label:
+        text: root.name_location
+        italic: True
+        font_size: '20dp'
+        text_size: self.size
+        halign: 'justify'
+        valign: 'top'
+        font_name: 'OCRAEXT.TTF'
+
+<Location_List>:
+    location_listview: id_listview
+    ListView:
+        id: id_listview
+        adapter:
+            la.ListAdapter(data=[], cls=ok.Location_List_Item,
+            args_converter=root.location_converter,selection_mode='single',
+            allow_empty_selection=False)
+    
+
     
 
