--- a/Full New/mascaret.kv
+++ b/Full New/mascaret.kv
@@ -227,14 +227,18 @@ MascaretRoot:
 
 
 
-
-
 <Formulaire_Ent_Jur>:
     list_ent_jur_box: id_jur_ent_list
     new_legal_entity_box: new_legal_entity
     size: self.size
     pos: self.pos
     BoxLayout:
+        canvas.before:
+            Color:
+                rgba: 1,0,0,1
+            Rectangle:
+                size: self.size
+                pos: self.pos
         spacing: "5dp"
         size_hint: 0.3, None
         pos_hint:{'x':0.05,'y':0.8}
@@ -247,18 +251,16 @@ MascaretRoot:
             on_release: root.send_new_legal_entity()
     Jur_Ent_List:
         id:id_jur_ent_list
-        size_hint: 0.5,0.45
+        size_hint: 0.3,0.45
         pos_hint:{'x':0.05,'y':0.3}
 
 <Jur_Ent_List_Item>:
     size_hint_y: None
-    size_hint_x: None
     height: "30dp"
-    width: "600dp"
     selected_color: (0.1, 0.1, 0.1, 0.1)
     deselected_color: (1,1,1,1)
     Label:
-        size_hint_x: 1.5
+        size_hint_x: 0.2
         text: root.id_jur_ent
         italic: True
         font_size: '20dp'
@@ -271,62 +273,30 @@ MascaretRoot:
         italic: True
         font_size: '20dp'
         text_size: self.size
-        halign: 'justify'
+        halign: 'left'
         valign: 'top'
         font_name: 'OCRAEXT.TTF'
 
 <Jur_Ent_List>:
-    ent_jur_listview: id_listview
+    ent_jur_listview: listview
     ListView:
-        id: id_listview
+        id: listview
         adapter:
-            la.ListAdapter(data=[], cls=ok.Jur_Ent_List_Item,
+            la.ListAdapter(data= root.get_ent_jur_list(),
+            cls=ok.Jur_Ent_List_Item,
             args_converter=root.ent_jur_converter,selection_mode='single',
             allow_empty_selection=False)
 
 
 
 
-
-
-
-
-
-
-<Formulaire_Location>:
-    list_location_box: id_location_list
-    new_location_box: new_location
-    size: self.size
-    pos: self.pos
-    BoxLayout:
-        spacing: "5dp"
-        size_hint: 0.3, None
-        pos_hint:{'x':0.05,'y':0.8}
-        height: "30dp"
-        TextInput:
-            id: new_location
-        Button:
-            size_hint: 0.5,1
-            text: "Add"
-            on_release: root.send_new_location()
-    Location_List:
-        id:id_location_list
-        size_hint: 0.5,0.45
-        pos_hint:{'x':0.05,'y':0.3}
-    Jur_Ent_List:
-        id:id_jur_ent_list
-        size_hint: 0.5,0.45
-        pos_hint:{'x':0.55,'y':0.3}
-
 <Location_List_Item>:
     size_hint_y: None
-    size_hint_x: None
     height: "30dp"
-    width: "600dp"
     selected_color: (0.1, 0.1, 0.1, 0.1)
     deselected_color: (1,1,1,1)
     Label:
-        size_hint_x: 1.5
+        size_hint_x: 0.2
         text: root.id_location
         italic: True
         font_size: '20dp'
@@ -339,19 +309,48 @@ MascaretRoot:
         italic: True
         font_size: '20dp'
         text_size: self.size
-        halign: 'justify'
+        halign: 'left'
         valign: 'top'
         font_name: 'OCRAEXT.TTF'
 
 <Location_List>:
-    location_listview: id_listview
+    location_listview: listview
     ListView:
-        id: id_listview
+        id: listview
         adapter:
-            la.ListAdapter(data=[], cls=ok.Location_List_Item,
+            la.ListAdapter(data= root.get_location_list(),
+            cls=ok.Location_List_Item,
             args_converter=root.location_converter,selection_mode='single',
             allow_empty_selection=False)
-    
 
-    
-
+<Formulaire_Location>:
+    ent_jur_listbox: ent_jur_list
+    location_listbox: location_list
+    new_location_box: new_location
+    size: self.size
+    pos: self.pos
+    BoxLayout:
+        canvas.before:
+            Color:
+                rgba: 1,0,0,1
+            Rectangle:
+                size: self.size
+                pos: self.pos
+        spacing: "5dp"
+        size_hint: 0.3, None
+        pos_hint:{'x':0.05,'y':0.8}
+        height: "30dp"
+        TextInput:
+            id: new_location
+        Button:
+            size_hint: 0.5,1
+            text: "Add"
+            on_release: root.send_new_location()
+    Location_List:
+        id:location_list
+        size_hint: 0.3,0.45
+        pos_hint:{'x':0.05,'y':0.3}
+    Jur_Ent_List:
+        id:ent_jur_list
+        size_hint: 0.3,0.45
+        pos_hint:{'x':0.45,'y':0.3}
