--- a/mascaret.kv
+++ b/mascaret.kv
@@ -1,10 +1,14 @@
 #:import la kivy.adapters.listadapter
-#:import ok user.outil
-#:import md gui.menuderoulant
+#:import fej gui.formulaire_outils.formulaire_ent_jur
+#:import fl gui.formulaire_outils.formulaire_location
+#:import md gui.widgets.menu_deroulant
+
 
 MascaretRoot:
 
 
+############################### Login Screen ###############################
+    
 <MascaretLoginScreen>:
     login_box: login_input
     password_box: password_input
@@ -12,7 +16,7 @@ MascaretRoot:
     login_area: login_rect
     canvas:
         Rectangle:
-            source: 'gui/mylogo8.jpg'
+            source: 'gui/login_screen/login_screen-wallpaper.jpg'
             size: root.width if (root.width / root.height) > (1920 / 1080) else root.height * (1920 / 1080), root.height if (root.width / root.height) <= (1920 / 1080) else root.width / (1920 / 1080)
             pos: self.pos
     BoxLayout:
@@ -23,7 +27,7 @@ MascaretRoot:
                 Color:
                     rgba: (0,0,0,0.5)
                 Rectangle:
-                    source: 'gui/testrectangle.png'
+                    source: 'gui/login_screen/login_screen_input_area.png'
                     size: (self.width + 120, self.height + 20)
                     pos: self.x - 100, self.y + 5
             size_hint: (None, None)
@@ -91,9 +95,14 @@ MascaretRoot:
                     valign: 'top'
                     halign: 'right'
 
+############################# End Login Screen #############################
 
+
+############################### Home Screens ###############################
+                    
 <MascaretHomeScreen>:
     mode: "narrow" if self.width < 800 else "wide"
+
 
 <HomePage>:
     name: 'homepage'
@@ -125,13 +134,13 @@ MascaretRoot:
                             size: self.size
                             pos: self.pos
 
-                HoverButton:
+                HoverButton1:
                     id: right_but
                     size_hint: 0.07,1
                     pos_hint: {'x': 1}
                     disabled: True
                     text: 'Go to Screen 2'
-                    background_normal: 'rectbut1.png'
+                    background_normal: 'gui/hoverclasses/rectbut1.png'
                     background_color: (230/255, 230/255, 230/255, 1)
                     on_press:
                         self.parent.parent.parent.manager.transition.direction = 'left'
@@ -226,8 +235,12 @@ MascaretRoot:
                 self.parent.manager.transition.direction = 'right'
                 self.parent.manager.current = '1'
 
+############################ End Home Screens ##############################
 
 
+
+########################### Formulaire Ent Jur #############################
+                
 <Formulaire_Ent_Jur>:
     list_ent_jur_box: id_jur_ent_list
     new_legal_entity_box: new_legal_entity
@@ -284,13 +297,16 @@ MascaretRoot:
         id: listview
         adapter:
             la.ListAdapter(data= root.get_ent_jur_list(),
-            cls=ok.Jur_Ent_List_Item,
+            cls=fej.Jur_Ent_List_Item,
             args_converter=root.ent_jur_converter,selection_mode='single',
             allow_empty_selection=False)
 
 
+######################### End Formulaire Ent Jur ###########################
 
 
+########################### Formulaire Location ############################
+            
 <Location_List_Item>:
     size_hint_y: None
     height: "30dp"
@@ -320,14 +336,14 @@ MascaretRoot:
         id: listview
         adapter:
             la.ListAdapter(data= root.get_location_list(),
-            cls=ok.Location_List_Item,
+            cls=fl.Location_List_Item,
             args_converter=root.location_converter,selection_mode='single',
             allow_empty_selection=False)
 
-<Formulaire_Location>:
-    ent_jur_listbox: ent_jur_list
+<Formulaire_Location>:    
     location_listbox: location_list
     new_location_box: new_location
+    ent_jur_button: ent_jur_but
     size: self.size
     pos: self.pos
     BoxLayout:
@@ -351,18 +367,16 @@ MascaretRoot:
         id:location_list
         size_hint: 0.3,0.45
         pos_hint:{'x':0.05,'y':0.3}
-    Jur_Ent_List:
-        id:ent_jur_list
-        size_hint: 0.3,0.45
-        pos_hint:{'x':0.45,'y':0.3}
-    Bouton_deroulant_Ent_jur:
-##        pos_hint:{'x':0.75,'y':0.3}
-        
+    Menu_Deroulant_Ent_Jur:
+        id:ent_jur_but
+        pos_hint:{'x':0.45,'y':0.8}
+
+######################### End Formulaire Location ##########################
 
 
-###########################Menu Deroulant######################################
+############################## Menu Deroulant ##############################
 
-<Bouton_Deroulant>:
+<Menu_Deroulant>:
     size_hint: None,None
     width: "200dp"
     height: "30dp"
@@ -388,10 +402,12 @@ MascaretRoot:
     selected_color: (0.1, 0.1, 0.1, 0.1)
     deselected_color: (1,1,1,1)
     Label:
-        text: root.name_jur_ent
+        text: root.name_object
         italic: True
         font_size: '20dp'
         text_size: self.size
         halign: 'left'
         valign: 'top'
         font_name: 'OCRAEXT.TTF'
+
+############################ End Menu Deroulant ############################
