--- a/mascaret.kv
+++ b/mascaret.kv
@@ -101,7 +101,7 @@ MascaretRoot:
 ############################### Home Screens ###############################
                     
 <MascaretHomeScreen>:
-    mode: 0 if self.width < 800 else 1
+    mode: "narrow" if self.width < 800 else "wide"
 
 
 <HomePage>:
